event management added

--- a/likeRate/Index.cshtml
+++ b/likeRate/Index.cshtml
@@ -4,15 +4,9 @@
 	ViewBag.Title = "Home - Welcome";
 }
 <style>
-	.user-image-container {
-		height: 225px;
-	}
-
-	.event-thumbnail {
-		margin: 0.25em;
-	}
-
-	.event-link {
+	.user-image-container { height: 225px; }
+	.event-thumbnail { margin: 0.25em; }
+	.event-link { 
 		font-weight: bold;
 		font-size: 0.8em;
 		margin-bottom: 0.3em;
@@ -23,43 +17,15 @@
 		margin-bottom: 0.3em;
 	}
 
-	.in-active {
-		background-color: lightgrey;
-	}
-
-	.like {
-		color: #4CAF50;
-	}
-
-	.mycanvas-follow {
-		color: #4CAF50;
-	}
-
-	.mycanvas-following {
-		color: #4CAF50;
-	}
-
-	.web2-like {
-		color: #4CAF50;
-	}
-
-	.like-link:hover {
-		cursor: pointer;
-	}
-
-	.like-link {
-		text-decoration: none;
-		margin-right: 0.75em;
-	}
-
-	.disabled-spacing {
-		margin-right: 0.75em;
-		font-size: 0.8em;
-	}
-
-	.your-item {
-		color: darkgrey
-	}
+	.in-active { background-color: lightgrey; }
+	.like { color: #4CAF50; }
+	.mycanvas-follow { color: #4CAF50; }
+	.mycanvas-following { color: #4CAF50; }
+	.web2-like { color: #4CAF50; }
+	.like-link:hover { cursor: pointer; }
+	.like-link { text-decoration: none; margin-right: 0.75em; }
+	.disabled-spacing { margin-right: 0.75em; font-size: 0.8em; }
+	.your-item { color: darkgrey }
 </style>
 
 <h2>@ViewBag.Title</h2>
