--- a/web2/web2/web2/Views/Shared/Layout.cshtml
+++ b/web2/web2/web2/Views/Shared/Layout.cshtml
@@ -32,6 +32,7 @@
 			<a id="icon-bar-signin" href="~/Profile/SignIn" title="Sign In"><i class="fas fa-sign-in-alt"></i></a>
 			<a id="icon-bar-signup" href="~/Profile/SignUp" title="Sign Up"><i class="fas fa-user-plus"></i></a>
 		}
+		<a id="icon-bar-aboutus" href="~/AboutUs/Index" title="About us"><i class="far fa-info-circle"></i></a>
 	</div>
 	<div id="workspace">
 		@RenderBody()
