--- a/web2/web2/web2/Views/AboutUs/Index.cshtml
+++ b/web2/web2/web2/Views/AboutUs/Index.cshtml
@@ -26,8 +26,8 @@
 <div>
 
 @using (Html.BeginForm(FormMethod.Post)) {
-	<button class="button-cancel" id="btnCancel" name="btnSubmit" value="close">Close</button>
-	<button class="button-action" id="btnMore" name="btnSubmit" value="more">More</button>
+	<button class="button-action" id="btnMore" name="btnSubmit" value="more"><i class="far fa-info-circle"></i>More</button>
+	<button class="button-cancel" id="btnCancel" name="btnSubmit" value="close"><i class="far fa-times"></i>Close</button>
 }
 </div>
 </div>
