--- a/web2/web2/web2/Views/AboutUs/More.cshtml
+++ b/web2/web2/web2/Views/AboutUs/More.cshtml
@@ -14,6 +14,6 @@
 	<p>One of the most common tunings for the standard or soprano ukulele is C6 tuning: G4–C4–E4–A4, which is often remembered by the notes in the "My dog has fleas" jingle (see sidebar).  The G string is tuned an octave higher than might be expected, so this is often called "high G" tuning. This is known as a "reentrant tuning"; it enables uniquely close-harmony chording.</p>
 </article>
 @using (Html.BeginForm(FormMethod.Post)) {
-	<button class="button-cancel" id="btnCancel" name="btnSubmit" value="close">Close</button>}
+	<button class="button-cancel" id="btnCancel" name="btnSubmit" value="close"><i class="far fa-times"></i>Close</button>}
 </div>
 
